# zadanie-rss-praktyki

backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/routes/channels/: get_channel.rs  mod.rs  preflight.rs  save.rs
backend/src/utils/: mod.rs
dokumenty/: architektura-aplikacji.drawio  design-ui.fig
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/commands/: mod.rs
frontend/src-tauri/src/utils/: fs.rs  json.rs
frontend/src/components/: Button.tsx  ButtonLink.tsx  ChannelArticleTable.tsx  ChannelAvaibleIndicator.tsx  ChannelCorrectnessIndicator.tsx  ChannelList.tsx  ChannelListItem.tsx  ChannelMetadata.tsx  ChannelUpdatedIndicator.tsx  Input.tsx  LoadingIndicator.tsx  Modal.tsx  MultilineInput.tsx
frontend/src/components/ui/: BackButton.tsx  Button.tsx  Input.tsx
frontend/src/data/: channels.ts
frontend/src/hooks/: channelId.ts  channels.tsx
frontend/src/layouts/: Main.tsx  Navbar.tsx  Root.tsx
frontend/src/pages/: ChannelCreateScreen.tsx  ChannelItemAddScreen.tsx  ChannelMetadataEditScreen.tsx  ChannelPreviewScreen.tsx  ChannelSelectionScreen.tsx  Index.tsx
frontend/src/screens/: ChannelCorrectnessCheckScreen.tsx  ChannelCreateScreen.tsx  ChannelItemAddScreen.tsx  ChannelMetadataEditScreen.tsx  ChannelPreviewScreen.tsx  ChannelSelectionScreen.tsx
frontend/src/utils/: utils.tsx
(+23 files in other folders)
